--- a/src/index.css
+++ b/src/index.css
@@ -75,3 +75,16 @@ body {
   position: absolute;
   transition: opacity 0.6s ease-in-out;
 }
+
+@layer components {
+  .active {
+    @apply text-blue-600;
+  }
+}
+
+input[type='search']::-webkit-search-decoration,
+input[type='search']::-webkit-search-cancel-button,
+input[type='search']::-webkit-search-results-button,
+input[type='search']::-webkit-search-results-decoration {
+  -webkit-appearance: none;
+}
