--- a/src/index.css
+++ b/src/index.css
@@ -98,6 +98,10 @@ body {
   }
 }
 
+* {
+  box-sizing: border-box;
+}
+
 input[type='search']::-webkit-search-decoration,
 input[type='search']::-webkit-search-cancel-button,
 input[type='search']::-webkit-search-results-button,
