--- a/src/index.css
+++ b/src/index.css
@@ -77,6 +77,11 @@ body {
 }
 
 @layer components {
+  .no-webkit-appearance {
+    -webkit-appearance: none;
+    appearance: none;
+  }
+
   .active {
     @apply text-blue-600;
   }
@@ -95,6 +100,49 @@ body {
 
   .mobile-menu ul li a {
     @apply block w-[100%] border-b border-dark-100 py-3 pl-6 text-left hover:bg-blue-100 dark:hover:bg-dark-200;
+  }
+
+  /* Price Range */
+
+  .range-slider {
+    height: 10px;
+    position: relative;
+    border-radius: 2px;
+    @apply bg-blue-100;
+  }
+  .range-selected {
+    height: 100%;
+    left: 30%;
+    right: 30%;
+    position: absolute;
+    border-radius: 5px;
+    @apply bg-blue-500;
+  }
+
+  .range-input {
+    position: relative;
+  }
+
+  .range-input input {
+    position: absolute;
+    width: 100%;
+    height: 10px;
+    top: -10px;
+    background: none;
+    pointer-events: none;
+    -webkit-appearance: none;
+    appearance: none;
+  }
+
+  .range-input input::-webkit-slider-thumb {
+    height: 20px;
+    width: 12px;
+    /* border-radius: 50%; */
+    border: 2px solid;
+    background-color: #fff;
+    pointer-events: auto;
+    -webkit-appearance: none;
+    @apply border-blue-500;
   }
 }
 
