--- a/src/index.css
+++ b/src/index.css
@@ -239,3 +239,13 @@ input[type='search']::-webkit-search-results-decoration {
   visibility: visible;
   color: var(--dark-200);
 }
+
+input.no-spinner::-webkit-outer-spin-button,
+input.no-spinner::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type='number'].no-spinner {
+  -moz-appearance: textfield;
+}
